syntax = "proto3";
package tokenization.v24;

import "gogoproto/gogo.proto";
import "tokenization/v24/balances.proto";
import "tokenization/v24/approval_criteria.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/tokenization/types/v24";

// CollectionApproval defines the rules for the approval of a transfer.
// Each transfer can be broken down into a (from, to, initiatedBy, transferTime, tokenId) tuple.
// We check the approvals for first match of this tuple, using the approvals. Subsequent matches are ignored.
//
// If the first match is disallowed, the transfer is disallowed.
// If the first match is allowed, then we check the rest of the restrictions. If any restrictions fail, then the transfer is disallowed. 
// We do not proceed to the next match.
//
// Challenges defines the challenges that must be met with valid solutions for the transfer to be approved.
//
// requireTo/From(DoesNot)EqualsInitiatedBy defines whether the to/from address must equal the initiatedBy address or not. If it doesn't, then the transfer is disallowed.
//  
// overallApprovals defines the overall approvals for the transfer (i.e. the running tally of the number of transfers and amounts transferred by all addresses).
// perAddressApprovals defines the approvals per unique from, to, and/or initiatedBy address.
// If any of these are nil, we assume unlimited approvals.
//
// IMPORTANT: We track the number of transfers and amounts transferred according to a tracker ID. This is a running tally that increments over time.
// Whenever a transfer is processed that maps to a specific tracker ID, we increment the number of transfers and amounts transferred.
// If the number of transfers or amounts transferred exceeds the corresponding overall or per address approvals, then the transfer is disallowed.
// Note we only track if overallApprovals or to/from/intiiatedByApprovals is not nil.
// If you want to reset the tracker tally, update the tracker ID to a new unique tracker ID.
// Tracker IDs are unique to their timelines. A tracker ID "abc" can be used for the collection, outgoing, and incoming timelines without overlap or overwriting one another.
//
// Ex: If overallApprovals maxNumTransfers = 20 and trackerID = "abc", then the first 20 transfers that map to trackerID = "abc" will be approved. The 21st transfer will be disallowed.
//
// IMPORTANT: Be very careful when updating an approved transfer but keeping the same tracker ID. 
// For example, if you change the corresponding token IDs and the old token IDs overlap, then the overlapping token IDs will already have existing tallies.
//    
// Another common area of confusion is what is actually being tallied. The tally is based on the approved transfer rules that are set.
// For example, if you don't have per address rules set and you update the approved transfer rules to include per address rules, 
// then the tally doesn't retroactively apply the per address rules to the previous transfers. It starts at that time.
//
// Lastly, we have overridesFromOutgoingApprovals and overridesToIncomingApprovals.
// If these are set to true, we ignore the from / to user's approved outgoing / incoming transfers, respectively.
// This is useful, for example, for forcefully revoking tokens.
// If these are set to false, the transfer must also be approved by the from /to user's approved outgoing / incoming transfers, respectively.

// CollectionApproval defines the rules for the approval of a transfer on the collection level
message CollectionApproval {
  // The list ID for the sender of the transfer.
  string fromListId = 1;
  // The list ID for the recipient of the transfer.
  string toListId = 2;
  // The list ID for the user who initiated the transfer.
  string initiatedByListId = 3;
  // The allowed range of transfer times for approval.
  repeated UintRange transferTimes = 4;
  // The allowed range of token IDs for approval.
  repeated UintRange tokenIds = 5;
  // The allowed range of ownership times for approval.
  repeated UintRange ownershipTimes = 6;
  
  // The URI associated with this approval, optionally providing metadata about the approval.
  string uri = 7;
  
  // Arbitrary custom data associated with this approval.
  string customData = 8;
  
  // The ID of this approval. Must be unique per level (i.e. collection, outgoing, incoming).
  string approvalId = 9;
  
  // The criteria that must be met for this approval to be considered.
  ApprovalCriteria approvalCriteria = 10;

  // Version of the approval. Maintained internally.
  string version = 11 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
}

// UserOutgoingApproval defines the rules for the approval of an outgoing transfer from a user.
message UserOutgoingApproval {
  // The list ID for the recipient of the transfer.
  string toListId = 1;

  // The list ID for the user who initiated the transfer.
  string initiatedByListId = 2;

  // The allowed range of transfer times for approval.
  repeated UintRange transferTimes = 3;

  // The allowed range of token IDs for approval.
  repeated UintRange tokenIds = 4;

  // The allowed range of ownership times for approval.
  repeated UintRange ownershipTimes = 5;

  // The URI associated with this approval, optionally providing metadata about the approval.
  string uri = 6;

  // Arbitrary custom data associated with this approval.
  string customData = 7;

  // The ID of this approval. Must be unique per level (i.e. collection, outgoing, incoming).
  string approvalId = 8;

  // The criteria that must be met for this approval to be considered.
  OutgoingApprovalCriteria approvalCriteria = 9;

  // Version of the approval. Maintained internally.
  string version = 10 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
}

// UserIncomingApproval defines the rules for the approval of an incoming transfer to a user.
message UserIncomingApproval {
  // The list ID for the sender of the transfer.
  string fromListId = 1;

  // The list ID for the user who initiated the transfer.
  string initiatedByListId = 2;

  // The allowed range of transfer times for approval.
  repeated UintRange transferTimes = 3;

  // The allowed range of token IDs for approval.
  repeated UintRange tokenIds = 4;

  // The allowed range of ownership times for approval.
  repeated UintRange ownershipTimes = 5;

  // The URI associated with this approval, optionally providing metadata about the approval.
  string uri = 6;

  // Arbitrary custom data associated with this approval.
  string customData = 7;

  // The ID of this approval. Must be unique per level (i.e. collection, outgoing, incoming).
  string approvalId = 8;

  // The criteria that must be met for this approval to be considered.
  IncomingApprovalCriteria approvalCriteria = 9;

  // Version of the approval. Maintained internally.
  string version = 10 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
}

// ApprovalIdentifierDetails defines the details to identify a specific approval.
message ApprovalIdentifierDetails {
  // The ID of the approval.
  string approvalId = 1;
  // The level of the approval. Can be "collection", "incoming", or "outgoing".
  string approvalLevel = 2;
  // The address of the approver. Leave blank "" if approvalLevel == "collection".
  string approverAddress = 3;
  // The version of the approval.
  string version = 4 [(gogoproto.customtype) = "Uint", (gogoproto.nullable) = false];
}

